# FuncLCMS

./: CMakeLists.txt  README.md  matplotlibrc  pyproject.toml  requirements.txt
cpp/: connected_component.cpp
src/: align_tmz.py  fisher_rao.py  grid2d.py  hot.py  load.py  main.py  optimal_transport.py  pipeline.py  plot.py  png_to_toy.py  ref_utils.py  save.py  sot.py  sparse.py  spectrum.py  strip_utils.py  synthetic_toy_cases.py  test.py  validation.py
