[project]
name = "codes"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "adjusttext>=1.3.0",
    "arrow>=1.4.0",
    "connected-components-3d>=3.26.1",
    "fdasrsf>=2.6.7",
    "future>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "numpy-indexed>=0.3.7",
    "opentims-bruker-bridge>=1.1.0",
    "opentimspy>=1.0.16",
    "pandas>=2.3.3",
    "pot>=0.9.6.post1",
    "pyarrow>=22.0.0",
    "pyopenms>=3.5.0",
    "scalene>=2.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
